--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,6 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
-# Ignore CLI configuration files
+# Ignore CLI configuration files/
 .terraformrc
 terraform.rc
