--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,11 +62,11 @@ jobs:
             if [ "${{ env.registry_hash }}" != "${{ env.local_hash }}" ] || \
               [ "${{ env.registry_hash }}" = "failed registry inspect" ] || \
               [ "${{ env.local_hash }}" = "failed local inspect" ]; then
-              ssh -T -o StrictHostKeyChecking=no ubuntu@${{ secrets.HOST }} "cd /home/ubuntu/app && docker pull ithatabdullah/flaskappimg:latest && docker build --no-cache -t ithatabdullah/flaskappimg:latest . && docker image prune -f -a --filter 'until=168h' && echo 'new build' > status.txt"
-              echo "image pulled and built"
+              ssh -T -o StrictHostKeyChecking=no ubuntu@${{ secrets.HOST }} "cd /home/ubuntu/app && docker pull ithatabdullah/flaskappimg:latest && docker image prune -f -a --filter 'until=168h' && echo 'new pull' > status.txt"
+              echo "image pulled"
 
             else
               ssh -T -o StrictHostKeyChecking=no ubuntu@${{ secrets.HOST }} "cd /home/ubuntu/app && echo 'no update' > status.txt"
-              echo "images hashes are identical! no pulling/building required"
+              echo "images hashes are identical! no pulling required"
             fi
 
