--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,7 +31,7 @@ jobs:
 
         - name: run container
           run: |
-              if [ "${{ env.status }}" = "new build" ]; then
+              if [ "${{ env.status }}" = "new pull" ]; then
                 ssh -T -o StrictHostKeyChecking=no ubuntu@${{ secrets.HOST }} "docker run -p 5000:5000 -d ithatabdullah/flaskappimg:latest"
   
               else
